<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
    >
        <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/title_force_sekitoba"
          android:id="@+id/chkForceSekitoba"
          />
    </LinearLayout>
    
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
	      <Button
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_ok"
	        android:id="@+id/btnOk"
	        />
	      <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel"
	        />
    </LinearLayout>
</LinearLayout>
